--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DrinksActivity"></activity>
+        <activity android:name=".PaymentActivity"></activity>
+        <activity android:name=".OrderActivity" />
+        <activity android:name=".ItemDetailActivity" />
+        <activity android:name=".DrinksActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
