Added food and snacks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PaymentActivity"></activity>
+        <activity android:name=".SnacksActivity"></activity>
+        <activity android:name=".FoodsActivity" />
+        <activity android:name=".PaymentActivity" />
         <activity android:name=".OrderActivity" />
         <activity android:name=".ItemDetailActivity" />
         <activity android:name=".DrinksActivity" />
